<resources>
    <string name="app_name">Star Wars Wiki</string>
    <string name="search">Search</string>
    <string name="favourite">favourite</string>
    <string name="name">Name:</string>
    <string name="no_data">no data</string>
    <string name="like">like</string>
    <string name="sex">Sex:</string>
    <string name="starships">Starships:</string>
    <string name="movies">Movies:</string>
    <string name="director">Director:</string>
    <string name="producer">Producer:</string>
    <string name="diameter">Diameter:</string>
    <string name="population">Population:</string>
    <string name="model">Model:</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="pilots">Pilots:</string>
    <string name="request_type">Request type</string>
    <string name="characters">Characters</string>
    <string name="planets">Planets</string>
    <string name="starships_simple">Starships</string>
    <string name="all">All</string>
    <string name="character">Character</string>
    <string name="planet">Planet</string>
    <string name="starship">Starship</string>
    <string name="clear">Clear</string>
    <string name="favourite_no_data">it\'s still empty here</string>
    <string name="loader">loader</string>
    <string name="enter_text">Enter 2 or more characters to get the result</string>
    <string name="not_found">Not found</string>
</resources>