<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/name_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CardDescriptionBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            android:id="@+id/location"
            style="@style/CardDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indentation"
            android:text="@string/no_data" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sex_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_desc_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/CardDescriptionBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex" />

        <TextView
            android:id="@+id/sex"
            style="@style/CardDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indentation"
            android:text="@string/no_data" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/starships_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_desc_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/CardDescriptionBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starships" />

        <TextView
            android:id="@+id/starships"
            style="@style/CardDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indentation"
            android:text="@string/no_data" />
    </LinearLayout>
</LinearLayout>