<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/recycle_card_margin"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPlanet"
        android:padding="16dp">

        <ImageView
            android:id="@+id/like_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/like"
            android:src="@drawable/heart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/name_block"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/like_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/CardDescriptionBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/location"
                style="@style/CardDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indentation"
                android:text="@string/no_data" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/diameter_block"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_desc_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/like_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_block">

            <TextView
                style="@style/CardDescriptionBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diameter" />

            <TextView
                android:id="@+id/diameter"
                style="@style/CardDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indentation"
                android:text="@string/no_data" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/population_block"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_desc_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/like_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diameter_block">

            <TextView
                style="@style/CardDescriptionBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/population" />

            <TextView
                android:id="@+id/population"
                style="@style/CardDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indentation"
                android:text="@string/no_data" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_desc_margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/like_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/population_block">

            <TextView
                style="@style/CardDescriptionBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/second_recycle_margin"
                app:spanCount="1"
                tools:itemCount="1"
                tools:listitem="@layout/movie_card" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>